--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -20,7 +20,7 @@
 ///////////////////////////////--------------------------------------------
 reticle_color "223 0 13"                                             // Cross
 cl_fovScale "1.55"                                                      // FOV
-mouse_sensitivity                          "0.9"                        // Sensitivity
+mouse_sensitivity                          "0.9"                        // Sensitivity (1600 DPI)
 //mouse_use_per_scope_sensitivity_scalars    "0"                          // enable different sensitivities for different scopes
 mouse_zoomed_sensitivity_scalar_0          "1"                          // ADS sens if per scope disabled
 //mouse_zoomed_sensitivity_scalar_1          "1"
