--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,21 +15,21 @@
 // --------------------------------------------------------------
 
 
-///////////////////////////////   Main cross 132 212 255 (Blue)
-////////KEY BINDS//////////////
+///////////////////////////////     Main cross 132 212 255 (Blue)
+////////KEY BINDS//////////////     Red cross 223 0 13
 ///////////////////////////////--------------------------------------------
-reticle_color "223 0 13"                                             // Cross
-cl_fovScale "1.55"                                                      // FOV
-mouse_sensitivity                          "0.9"                        // Sensitivity (1600 DPI)
+reticle_color "223 0 13"                                                  // Cross
+cl_fovScale "1.55"                                                        // FOV
+mouse_sensitivity                          "0.9"                          // Sensitivity (1600 DPI)
 //mouse_use_per_scope_sensitivity_scalars    "0"                          // enable different sensitivities for different scopes
-mouse_zoomed_sensitivity_scalar_0          "1"                          // ADS sens if per scope disabled
+mouse_zoomed_sensitivity_scalar_0            "1"                          // ADS sens if per scope disabled
 //mouse_zoomed_sensitivity_scalar_1          "1"
-//mouse_zoomed_sensitivity_scalar_2          "1.44874"
-//mouse_zoomed_sensitivity_scalar_3          "1.62462"
-//mouse_zoomed_sensitivity_scalar_4          "1.7163"
-//mouse_zoomed_sensitivity_scalar_5          "1.80983"
-//mouse_zoomed_sensitivity_scalar_6          "1.85706"
-//mouse_zoomed_sensitivity_scalar_7          "1.88555"
+//mouse_zoomed_sensitivity_scalar_2          "1"
+//mouse_zoomed_sensitivity_scalar_3          "1"
+//mouse_zoomed_sensitivity_scalar_4          "1"
+//mouse_zoomed_sensitivity_scalar_5          "1"
+//mouse_zoomed_sensitivity_scalar_6          "1"
+//mouse_zoomed_sensitivity_scalar_7          "1"
 
 
 ///////////////////////////
