--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,21 +15,21 @@
 // --------------------------------------------------------------
 
 
-///////////////////////////////     Main cross 132 212 255 (Blue)
-////////KEY BINDS//////////////     Red cross 223 0 13
+///////////////////////////////   Main cross 132 212 255 (Blue)
+////////KEY BINDS//////////////   Red cross 255 30 44               Green cross 105 255 65
 ///////////////////////////////--------------------------------------------
-reticle_color "223 0 13"                                                  // Cross
-cl_fovScale "1.55"                                                        // FOV
-mouse_sensitivity                          "0.9"                          // Sensitivity (1600 DPI)
+reticle_color "105 255 65"                                              // Cross
+cl_fovScale "1.55"                                                      // FOV
+mouse_sensitivity                          "0.9"                        // Sensitivity 1600 DPI
 //mouse_use_per_scope_sensitivity_scalars    "0"                          // enable different sensitivities for different scopes
-mouse_zoomed_sensitivity_scalar_0            "1"                          // ADS sens if per scope disabled
+mouse_zoomed_sensitivity_scalar_0          "1"                          // ADS sens if per scope disabled
 //mouse_zoomed_sensitivity_scalar_1          "1"
-//mouse_zoomed_sensitivity_scalar_2          "1"
-//mouse_zoomed_sensitivity_scalar_3          "1"
-//mouse_zoomed_sensitivity_scalar_4          "1"
-//mouse_zoomed_sensitivity_scalar_5          "1"
-//mouse_zoomed_sensitivity_scalar_6          "1"
-//mouse_zoomed_sensitivity_scalar_7          "1"
+//mouse_zoomed_sensitivity_scalar_2          "1.44874"
+//mouse_zoomed_sensitivity_scalar_3          "1.62462"
+//mouse_zoomed_sensitivity_scalar_4          "1.7163"
+//mouse_zoomed_sensitivity_scalar_5          "1.80983"
+//mouse_zoomed_sensitivity_scalar_6          "1.85706"
+//mouse_zoomed_sensitivity_scalar_7          "1.88555"
 
 
 ///////////////////////////
@@ -174,7 +174,6 @@ stream_cache_high_priority_static_models "1"                            // Prelo
 stream_cache_preload_from_rpak "1"                                      // Preload to cache from rpak ([0] Never preload [1] Preload static models [2] Preload always) bo)
 staticProp_max_scaled_dist "1500"                                       // Distance for props
 mat_compressedtextures "1"                                              // Force to use compressed textures (Works)
-r_dxgi_max_frame_latency "1"
 fps_max "0"                                                             // In-game framerate limiter (Works)
 
 
@@ -224,7 +223,9 @@ mat_colorcorrection_editor "1"                                          // (Work
 
 //TESTS
 
-
+//r_dxgi_max_frame_latency "1"                            // Add "//" if Reflex is off!
+gfx_nvnUseLowLatency "1"                                // Nvidia reflex
+gfx_nvnUseLowLatencyBoost "1"                           // Nvidia reflex ultra mb idk
 
 
 /////////////////////
@@ -526,7 +527,6 @@ mat_compressedtextures 1
 
 cl_ragdoll_collide 0
 
-r_dxgi_max_frame_latency 0
 
 
 
